kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cribbage-backend
  template:
    metadata:
      labels:
        app: cribbage-backend
    spec:
      containers:
        - name: flask
          image: "gcr.io/optimum-pier-280005/cribbage-server:latest"
          ports:
            - name: http
              containerPort: 5000
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
