kubernetes/flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cards-backend
  template:
    metadata:
      labels:
        app: cards-backend
    spec:
      containers:
        - name: flask
          image: "gcr.io/optimum-pier-280005/github.com/zachcalvert/cards:backend-7821191eac2faa37914b3b0260ff0a8a6fb47e12"
          ports:
            - name: http
              containerPort: 5000
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
