kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cribbage-frontend
  template:
    metadata:
      labels:
        app: cribbage-frontend
    spec:
      containers:
        - name: react
          image: "gcr.io/optimum-pier-280005/cribbage-client:latest"
          ports:
            - containerPort: 80
