kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: cards-backend
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"5000":"cards-backendconfig"}}'
spec:
  type: ClusterIP
  selector:
    app: cards-backend
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: backend-port
