kubernetes/cards.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cards-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cards
  template:
    metadata:
      labels:
        app: cards
    spec:
      containers:
        - name: flask
          image: "gcr.io/optimum-pier-280005/cards-server:v1"
          ports:
            - containerPort: 5000
        - name: react
          image: "gcr.io/optimum-pier-280005/cards-client:v5"
          ports:
            - containerPort: 80
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: cards-service
  labels:
    app: cards
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"5000":"cards-backendconfig"}}'
spec:
  selector:
    app: cards
  ports:
  - port: 80
    protocol: TCP
    name: cards-port
  - port: 5000
    protocol: TCP
    name: flask-port
