kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: cards-frontend
  ports:
  - port: 80
    protocol: TCP
    name: frontend-port
